--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body{
 h1{
     font-family: sans-serif;
     color: white;
-    font-size: 100px;
+    font-size: auto;
 }
 .btn {
     background-color: DodgerBlue;
     border: none;
     color: white;
-    padding: 12px 30px;
+    padding: 10px 28px;
     cursor: pointer;
     font-size: 20px;
     border-radius: 24px;
