--- a/style.css
+++ b/style.css
@@ -1,34 +1,8 @@
-body {
-  background-color: #03071e;
-}
-h1 {
-  font-family: sans-serif;
-  color: white;
-  font-size: auto;
-}
-.btn {
-  background-color: DodgerBlue;
-  border: none;
-  color: white;
-  padding: 10px 28px;
-  cursor: pointer;
-  font-size: 20px;
-  border-radius: 24px;
-  display: block;
-  margin: auto;
-  text-decoration: none;
-}
-.btn:hover {
-  background-color: RoyalBlue;
-}
-#center {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-a:link {
-  text-decoration: none;
+#content {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
