--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@
     transform: translateX(-50%) translateY(-50%);
     z-index: -1;
 }
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    padding: 10px;
+    background-color: #1f2d41;
+}
